--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "pro-media-editor",
+  "homepage": "https://bordaj.github.io/bordaj-pro-photo-editor ",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,15 +8,19 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
     "caman": "^4.1.2",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-cropper": "^2.1.6",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-switch": "^6.0.0",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": " react-scripts  start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
